--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,8 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="14"/>
     <application android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher">
+                 android:icon="@drawable/ic_launcher"
+                 android:theme="@android:style/Theme.Holo.Light">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
