--- a/ToDoReminder/build.gradle
+++ b/ToDoReminder/build.gradle
@@ -18,7 +18,7 @@ android {
 
     defaultConfig {
         applicationId "com.Ms.ToDoReminder"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -40,5 +40,24 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:+'
     compile 'com.android.support:appcompat-v7:+'
+
+    //Style Library - Twitter Bootstrap Like
     compile 'com.beardedhen:androidbootstrap:+'
+
+    //---------Style Library - Card View Like for Android < 5.0---------
+    //Core
+    compile 'com.github.gabrielemariotti.cards:cardslib-core:2.0.1'
+
+    //Optional for built-in cards
+    compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.0.1'
+
+    //Optional for RecyclerView
+    compile 'com.github.gabrielemariotti.cards:cardslib-recyclerview:2.0.1'
+
+    //Optional for staggered grid view
+    compile 'com.github.gabrielemariotti.cards:cardslib-extra-staggeredgrid:2.0.1'
+
+    //Optional for drag and drop
+    compile 'com.github.gabrielemariotti.cards:cardslib-extra-dragdrop:2.0.1'
+
 }
